tests/mm0_mmu/fail/bad-sort2341.mm0
-- bad modifier order
strict provable free pure sort s2341;